Reuse explicit applicability schema builder